# finance

./: pyproject.toml
docs/: topix.md
src/: FTSE-fetcher.py  acwi_price_fetcher.py  arch.ipynb  convert_to_jpy.py  dividends_reinvestment_return.py  expense.ipynb  get_geometric_mean_annual_return.py  get_geometric_mean_annual_return_jpy.py  interpreter_check.py  loan.ipynb  log_return.ipynb  monitoring.ipynb  nikkei_dow.ipynb  nomura_bpi_dist.ipynb  pandas_datareader_test.py  pension.ipynb  sp500.ipynb  topix.ipynb  topix_dist.ipynb
src/analysis/: corelation.ipynb  pension.ipynb
src/analysis/build_portfolio/: bonds.ipynb  commodity.ipynb
src/analysis/fund_analysis/: bond_portfolio.ipynb  gold_portfolio.ipynb  investment_trust.ipynb  portfolio.ipynb  reit.ipynb  reit_portfolio.ipynb  sp_vs_vti.ipynb  stock_portfolio.ipynb  vgk.ipynb
src/analysis/prob_dist_of_index/: get_gold.ipynb
src/analysis/state_space_model/: topix.ipynb
src/data_cleaning/: data_cleaning.ipynb  make_parquet.ipynb
src/datareader/: get_gold.ipynb
src/evaluation_of_etf/: bond.ipynb  japanese_bonds_ftse_vs_nomurabpi.ipynb  reit.ipynb
src/fund_analysis/: ivv.ipynb
src/fund_price_fetcher/: price_fetcher.py
src/market/: Arguments_against_the_S&P_500_choice.ipynb
src/prob_dist_of_index/: nikkei225.ipynb  nomura_bpi_dist.ipynb  topix.ipynb
src/state_space_model/: topix.ipynb
src/visualize/: pie_chart.ipynb
src/volatility/: SGX.ipynb  risk_parity.ipynb  stocks.ipynb
